# even_odd_crate

./: Cargo.toml  README.md
src/: lib.rs
