[package]
name = "even_odd"
version = "0.1.0"
authors = ["themohal <farjadmohal@gmail.com>"]
edition = "2018"
repository = "https://github.com/themohal/even_odd_crate"
homepage = "https://github.com/themohal/even_odd_crate"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Even Odd Check My First Crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
